# gpt-rs

./: .gitignore  Cargo.toml
src/: ._html.rs  cli.rs  embeddings.rs  history.rs  html.rs  lib.rs  main.rs  my_macros.rs  openai.rs  websocket.rs
templates/: index.html  info.html
