[package]
name = "gpt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
askama = "0.12.0"
async-openai = "0.10.3"
async-session = "3.0.0"
axum = {version = "0.6.18",  features = ["ws"]}
axum-sessions = "0.5.0"
csv = "1.2.1"
derive_builder = "0.12.0"
env_logger = "0.8"
log = "0.4"
ndarray = "0.15.6"
rand = "0.8.5"
serde = {version = "1.0.163", features=["derive"]}
serde_json = "1.0.96"
tiktoken-rs = {version = "0.4.2", features=["async-openai"]}
tokio = {version = "1.28.1", features=["rt-multi-thread"]}
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = {version= "0.3.17", features = ["env-filter"]}
structopt = "0.3.21"
